[package]
name = "cryptic"
version = "0.1.0"
edition = "2021"
description = "A simple cryptography library in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
sha2 = "0.10.8"
md-5 = "0.10.6"
rand = "0.8.5"
generic-array = "0.14.7"
digest = "*"