[package]
name = "crypticy"
version = "0.2.2"
edition = "2021"
description = "A simple cryptography library in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
argon2 = "0.4.1"
generic-array = "0.14.7"
rand = "0.8.5"